simple/test/features/errors/semantic/e1066_invalid_main_signature.spl
# E1066: Invalid Main Signature

Feature: E1066 - Invalid Main Signature
  As a Simple compiler
  I want to detect invalid main function signatures
  So that the entry point has the correct signature

  Background:
    Given I have the Simple compiler

  Scenario: Main with parameters
    When I compile:
      '''
      fn main(args: [str]):  # Error: main should not have parameters
        print("Hello")
      '''
    Then I should see error E1066 at line 1
    And the error message should be "`main` function has invalid signature"
    And the label should indicate "invalid main signature"
    And the help should suggest "`main` should be `fn main()` or `fn main() -> i32`"

  Scenario: Main with wrong return type
    When I compile:
      '''
      fn main() -> str:  # Error: should be void or i32
        "Hello"
      '''
    Then I should see error E1066 at line 1
    And the error should indicate invalid return type

  Scenario: Main with generic parameters
    When I compile:
      '''
      fn main<T>():  # Error: main should not be generic
        # body
      '''
    Then I should see error E1066

  Scenario: Valid main without return type
    When I compile:
      '''
      fn main():
        print("Hello, world!")
      '''
    Then compilation should succeed

  Scenario: Valid main with i32 return
    When I compile:
      '''
      fn main() -> i32:
        print("Hello, world!")
        0
      '''
    Then compilation should succeed

  Scenario: Main as method (invalid)
    When I compile:
      '''
      struct App:
        name: str

      impl App:
        fn main():  # Error: main should be a free function
          print("Hello")
      '''
    Then I should see error E1066 or appropriate error

  Scenario: Multiple main functions
    When I compile:
      '''
      fn main():
        print("First")

      fn main():  # Error: duplicate definition
        print("Second")
      '''
    Then I should see error E1008 (Duplicate Definition)

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn main(args: [str]):
        print("test")
      '''
    Then I should see error E1066
    And the error message should contain "잘못된 Main 시그니처"
